--- a/style.css
+++ b/style.css
@@ -2,5 +2,9 @@ button{
     background-color:green;
 }
 .heading{
-    text-align : center;
+    text-align : start;
+}
+p{
+    text-align: center;
+    text-decoration: line-through;
 }
